--- a/Lunch_n_Learn/aura/Lunch_n_Learn/Lunch_n_Learn.cmp
+++ b/Lunch_n_Learn/aura/Lunch_n_Learn/Lunch_n_Learn.cmp
@@ -5,7 +5,7 @@
 		<lightning:layoutItem padding="around-small" size="12" smallDeviceSize="12" mediumDeviceSize="4" largeDeviceSize="4">
             <lightning:card title="Lunch &amp; Learn - using SFDX and CLI with VS Code" iconName="action:fallback">
                 <div class="row">
-                    <p><a onclick="{!c.handleClicks}">VS Code Download</a></p>
+                    <p><a onclick="{!c.handleClick}">VS Code Download</a></p>
                     <p>Important message:  {!v.tempMessage}</p>
                 </div>
             </lightning:card>
